added bg colour

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     width: 100%;
     background-position: center;
     margin-bottom: 50px;
+    background-color:rgba(185, 178, 178, 0.062);
 }
 
 .form{
